--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,18 +8,102 @@ output:
 
 ## Loading and preprocessing the data
 
-
+unzip("./activity.zip")
+datos_actividad <- read.csv("./activity.csv")
+summary(datos_actividad)
+head(datos_actividad)
+str(datos_actividad)
 
 ## What is mean total number of steps taken per day?
 
+#1. Calculate the total number of steps taken per day
+pasos_por_dia <- aggregate(steps ~ date, datos_actividad, sum, na.rm=TRUE)
+
+#2. If you do not understand the difference between a histogram and a barplot, research the difference between them. 
+#Make a histogram of the total number of steps taken each day
+hist(pasos_por_dia$steps, xlab="Total Number of Steps per day", ylab="Number of Days", main="Total Number of Steps each day")
+
+#3. Calculate and report the mean and median of the total number of steps taken per day
+media<-mean(pasos_por_dia$steps)
+media
+
+mediana<-median(pasos_por_dia$steps)
+mediana
 
 
 ## What is the average daily activity pattern?
 
+#1. Make a time series plot (i.e. \color{red}{\verb|type = "l"|}type = "l") of the 5-minute interval (x-axis) and the 
+#average number of steps taken, averaged across all days (y-axis)
+
+pasos_por_intervalo<-aggregate(steps~interval, data=datos_actividad, mean, na.rm=TRUE)
+plot(steps~interval, data=pasos_por_intervalo, type="l", main="Avarage step per time interval")
+
+#2. Which 5-minute interval, on average across all the days in the dataset, contains 
+#the maximum number of steps?
+
+intervalo_max_pasos <- pasos_por_intervalo[which.max(pasos_por_intervalo$steps),]$interval
+intervalo_max_pasos
 
 
 ## Imputing missing values
 
+# 1. Calculate and report the total number of missing values in the dataset (i.e. the total 
+#number of rows with \color{red}{\verb|NA|}NAs)
+
+valoresNA<-sum(is.na(datos_actividad[,1]))
+valoresNA
+
+# 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy 
+#does not need to be sophisticated. For example, you could use the mean/median for that day,
+#or the mean for that 5-minute interval, etc.
+
+m<-mean(pasos_por_intervalo$steps)
+m
+
+# 3. Create a new dataset that is equal to the original dataset but with the missing data 
+#filled in.
+
+datos_actividad2<-datos_actividad
+datos_actividad2[is.na(datos_actividad[,1]),1]<-m
+head(datos_actividad2)
+
+# 4. Make a histogram of the total number of steps taken each day and Calculate and report 
+#the mean and median total number of steps taken per day. Do these values differ from the
+#estimates from the first part of the assignment? What is the impact of imputing missing 
+#data on the estimates of the total daily number of steps?
+
+total_pasos_dia1<-aggregate(steps~date, datos_actividad, sum)
+hist(total_pasos_dia1$steps, xlab="Class of Total Number of Steps per day", 
+     ylab="Number of Days", main="Number of Steps taken each day after missing values are imputed")
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+#1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” 
+#indicating whether a given date is a weekday or weekend day.
+datos_actividad2$date<-as.Date(datos_actividad2$date)
+library(dplyr)
+
+datos_actividad3<-datos_actividad2%>%
+  mutate(dayType= ifelse(weekdays(datos_actividad2$date)=="Saturday" | weekdays(datos_actividad2$date)=="Sunday", "Weekend", "Weekday"))
+head(datos_actividad3)
+
+#2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute 
+#interval (x-axis) and the average number of steps taken, averaged across all weekday 
+#days or weekend days (y-axis). See the README file in the GitHub repository to see an 
+#example of what this plot should look like using simulated data.
+
+media_pasos_dia_intervalo<-datos_actividad3 %>%
+  group_by(dayType, interval) %>%
+  summarize(averageStepByDay=sum(steps))
+
+head(media_pasos_dia_intervalo)
+
+library(lattice)
+with(media_pasos_dia_intervalo, 
+     xyplot(averageStepByDay ~ interval | dayType, 
+            type = "l",      
+            main = "Total Number of Steps within Intervals by day Type",
+            xlab = "Daily Intervals",
+            ylab = "Average Number of Steps"))
